--- a/desafios/desafio012/cordel.html
+++ b/desafios/desafio012/cordel.html
@@ -16,6 +16,7 @@
             Por <strong><a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a></strong>
         </p>
     </header>
+
     <section class="normal">
         <p>
             Estou ficando cansado <br>
@@ -28,7 +29,7 @@
         </p>
     </section>
 
-    <section class="foto">
+    <section class="foto" id="foto01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -39,5 +40,58 @@
             E um coração desenhado. <br>
         </p>
     </section>
+    <section class="normal">
+        <p>
+            Arroba agora não pesa <br>
+            É parte de um endereço <br>
+            Ponto final nem se usa <br>
+            Ou vai até no começo <br>
+            Agora é .com <br>
+            Se o saite é muito bom <br>
+            Ele vale um alto preço. <br>
+            <br>
+            Pra piorar a liguagem <br>
+            O emoticom é um risco <br>
+            Tem símbolo para tudo <br> 
+            Ponto e vírgula e um asterisco <br>
+            Um beijo significa <br>
+            Pra entender como fica <br>
+            Decifre esse rabisco. <br>
+        </p>
+    </section>
+    <section class="foto" id="foto02">
+        <p>
+            Tenho saudade das cartas <br>
+            Escritas com a própria mão <br>
+            Mandava no mês de Junho <br>
+            Só chegava no Verão <br>
+            Mas matava a saudade <br>
+            Era texto de verdade <br>
+            Nas linhas do coração. <br>
+        </p>
+    </section>
+    <section class="normal">
+        <p>
+            Agora, escrevo e envio <br>
+            Chegando na mesma hora <br>
+            Mas quando vou prosear <br>
+            A pessoa foi embora <br>
+            Abriu outro aplicativo <br>
+            O mundo ficou cativo <br>
+            Da tecnologia do agora. <br>
+
+            Felizmente, pra orar <br>
+            Não precisa de internet <br>
+            Deus escuta todo mundo <br>
+            Se quiser, faça esse teste <br>
+            Dois pontos são dois joelhos <br>
+            Seus lábios são aparelhos <br>
+            Deixe que Deus interprete. <br>
+        </p>
+    </section>
+
+    <footer>
+        <p>Site desenvolvido por <a href="https://instagram.com/l.peneluca" target="_blank" rel="external"><strong>Luan Peneluca</strong></a> para o Curso em Video</p>
+    </footer>
 </body>
 </html>
