--- a/desafios/desafio012/cordel.html
+++ b/desafios/desafio012/cordel.html
@@ -91,7 +91,7 @@
     </section>
 
     <footer>
-        <p>Site desenvolvido por <a href="https://instagram.com/l.peneluca" target="_blank" rel="external"><strong>Luan Peneluca</strong></a> para o Curso em Video</p>
+        <p>Site desenvolvido por <a href="https://instagram.com/l.peneluca" target="_blank" rel="external"><strong>Luan Peneluca</strong></a> para o <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank" rel="external"><strong>Curso em Video</strong></a>.</p>
     </footer>
 </body>
 </html>
